@@ -1,3 +1,9 @@
+2012-01-26  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* mprapi.h (MprAdminConnectionRemoveQuarantine): Revert
+	to old definition which is correct by marking the function
+	as WINAPI.
+
 2012-01-25  Kai Tietz  <ktietz@redhat.com>
 
 	* iprtrmib.h (MIB_TCP_STATE): New typedef.
